deployment/base/catalog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: deployment-project
spec:
  selector:
    matchLabels:
      app: catalog
  replicas: 1
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog-container
        image: maflus/catalog:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
