deployment/base/catalog-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
  namespace: deployment-project
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: catalog-db
