deployment/base/catalog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-container
  namespace: deployment-project
spec:
  selector:
    app: catalog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
