deployment/base/homepage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-page
  namespace: deployment-project
spec:
  selector:
    app: home-page
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
