deployment/base/reg-log-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reg-log-db
  namespace: deployment-project
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: reg-log-db
