deployment/base/songs-history-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: songs-history
  namespace: deployment-project
spec:
  selector:
    app: songs-history
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
